feat: compute round distributions
